--- a/css/dangky.css
+++ b/css/dangky.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+/* Font Poppins đã được import trong style.css */
 
 body {
     font-family: 'Poppins', sans-serif;
